adds various changes to support tweetrot frontend
